# juno

./: .dockerignore  .env  .env.development  .env.production  .env.skylab  .eslintignore  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  .prettierrc  ADMIN.md  CONTRIBUTING.md  COPYING  Cargo.toml  Dockerfile  HACKING.md  LICENSE  LICENSE.md  README.md  SECURITY.md  TODO  canister_ids.json  clippy.toml  dfinity-oisy-wallet-signer-0.0.1-rc.2.tgz  dfx.json  docker-compose.yml  eslint-local-rules.cjs  eslint.config.mjs  juno.config.mjs  package-lock.json  package.json  playwright.config.ts  release.md  rust-toolchain.toml  svelte.config.js  tsconfig.eslint.json  tsconfig.json  tsconfig.spec.json  tsconfig.sputnik.json  (+8 more)
src/console/: Cargo.toml  console.did
src/console/src/: constants.rs  controllers.rs  guards.rs  impls.rs  lib.rs  lifecycle.rs  memory.rs  metadata.rs  mission_control.rs  msg.rs  observatory.rs  proposals.rs  satellite.rs  store.rs  types.rs  upgrade.rs  wasm.rs
src/console/src/accounts/: config.rs  credits.rs  impls.rs  init.rs  mod.rs  store.rs
src/console/src/api/: accounts.rs  auth.rs  cdn.rs  config.rs  controllers.rs  cycles.rs  economy.rs  factory.rs  http.rs  invitation_code.rs  mission_control.rs  mod.rs  rates.rs  segments.rs  storage.rs
src/console/src/auth/: authenticate.rs  delegation.rs  mod.rs  register.rs  salt.rs  store.rs  strategy_impls.rs
src/console/src/cdn/: assert.rs  constants.rs  lifecycle.rs  mod.rs  proposals.rs  store.rs
src/console/src/certification/: cert.rs  mod.rs  strategy_impls.rs
src/console/src/cycles/: convert.rs  mod.rs
src/console/src/economy/: mod.rs
src/console/src/factory/: canister.rs  impls.rs  mission_control.rs  mission_control_new.rs  mod.rs  orbiter.rs  orchestrator.rs  satellite.rs  types.rs  ufo.rs
src/console/src/fees/: init.rs  mod.rs  services.rs  store.rs  types.rs  upgrade.rs
src/console/src/memory/: lifecycle.rs  manager.rs  mod.rs  services.rs  upgrade.rs
src/console/src/payments/: icp.rs  mod.rs  payments.rs
src/console/src/rates/: init.rs  mod.rs  services.rs  store.rs
src/console/src/segments/: mod.rs  services.rs  store.rs
src/console/src/storage/: batch_group.rs  certified_assets.rs  impls.rs  mod.rs  msg.rs  runtime.rs  state.rs  store.rs  strategy_impls.rs  types.rs  upgrade.rs
src/console/src/store/: heap.rs  mod.rs  services.rs  stable.rs
src/console/src/strategies_impls/: cdn.rs  storage.rs
src/console/src/upgrade/: heap_to_stable.rs  impls.rs  mod.rs  types.rs
src/console/src/withdraw/: icp.rs  icrc.rs  mod.rs
src/libs/auth/: Cargo.toml  LICENSE-AGPL  LICENSE-MIT  LICENSE.md  README.md
src/libs/auth/src/: cert.rs  constants.rs  impls.rs  lib.rs  random.rs  runtime.rs  seed.rs  services.rs  strategies.rs  types.rs
src/libs/cdn/: Cargo.toml  LICENSE.md  README.md
src/libs/cdn/src/: lib.rs  lifecycle.rs  strategies.rs  types.rs
src/libs/collections/: Cargo.toml  LICENSE.md  README.md
src/libs/collections/src/: assert_rules.rs  assert_stores.rs  constants.rs  errors.rs  impls.rs  lib.rs  msg.rs  store.rs  types.rs  utils.rs
src/libs/macros/: Cargo.toml  LICENSE  LICENSE.md  README.md
src/libs/macros/src/: error.rs  lib.rs  parser.rs
src/libs/macros/tests/: compile_tests.rs  satellite.rs
src/libs/satellite/: Cargo.toml  LICENSE.md  README.md  satellite.did
src/libs/satellite/src/: assert.rs  constants.rs  guards.rs  hooks.rs  impls.rs  lib.rs  lifecycle.rs  memory.rs  msg.rs  random.rs  satellite.rs  triggers.rs  types.rs  upgrade.rs  version.rs
src/libs/shared/: Cargo.toml  LICENSE.md  README.md
src/libs/shared/src/: assert.rs  canister.rs  constants.rs  constants_shared.rs  controllers.rs  date.rs  day.rs  env.rs  errors.rs  ic.rs  icrc_ledger.rs  impls.rs  ledger.rs  lib.rs  list.rs  msg.rs  random.rs  regex.rs  serializers.rs  structures.rs  types.rs  upgrade.rs  utils.rs  version.rs
src/libs/storage/: Cargo.toml  LICENSE.md  README.md
src/libs/storage/src/: assert.rs  certified_assets.rs  commit.rs  constants.rs  errors.rs  heap_utils.rs  http_request.rs  impls.rs  interfaces.rs  lib.rs  memory.rs  msg.rs  rewrites.rs  routing.rs  runtime.rs  stable_utils.rs  state.rs  store.rs  strategies.rs  types.rs  upgrade.rs  url.rs  utils.rs
src/libs/utils/: Cargo.toml  LICENSE.md  README.md
src/libs/utils/src/: doc.rs  json.rs  lib.rs  types.rs
src/mission_control/: Cargo.toml  mission_control.did
src/mission_control/src/: constants.rs  guards.rs  impls.rs  lib.rs  lifecycle.rs  memory.rs  monitoring.rs  random.rs  store.rs  types.rs
src/mission_control/src/api/: cdn.rs  config.rs  controllers.rs  http.rs  mgmt.rs  mod.rs  monitoring.rs  orbiters.rs  satellites.rs  storage.rs  ufos.rs  wallet.rs
src/mission_control/src/cdn/: mod.rs
src/mission_control/src/controllers/: assert.rs  mod.rs  (+5 more)
src/observatory/: Cargo.toml  observatory.did
src/observatory/resources/: deposited-cycles.html  deposited-cycles.txt  failed-deposit-cycles.html  failed-deposit-cycles.txt  index.html
src/observatory/src/: console.rs  constants.rs  cron.rs  cron_jobs.rs  guard_openid.rs  guards.rs  impls.rs  lib.rs  lifecycle.rs  memory.rs  notify.rs  random.rs  reports.rs  store.rs  templates.rs  types.rs
src/orbiter/: Cargo.toml  orbiter.did
src/orbiter/resources/: regexes.yaml
src/orbiter/src/: analytics.rs  assert.rs  constants.rs  filters.rs  guards.rs  handlers.rs  impls.rs  lib.rs  lifecycle.rs  memory.rs  msg.rs  serializers.rs  store.rs  types.rs  utils.rs
src/satellite/: Cargo.toml  satellite.did  satellite_extension.did
src/satellite/resources/: index.html
src/satellite/src/: assets.rs  guards.rs  impls.rs  lib.rs  memory.rs  msg.rs  types.rs  utils.rs
src/shared/: Cargo.toml
src/shared/src/: assert.rs  canister.rs  constants.rs  controllers.rs  day.rs  env.rs  ic.rs  impls.rs  ledger.rs  lib.rs  msg.rs  serializers.rs  types.rs  upgrade.rs  utils.rs  version.rs
src/sputnik/: .gitignore  Cargo.toml  build.rs  sputnik.did  sputnik_extension.did
src/sputnik/resources/: functions.rs  index.mjs
src/sputnik/src/: demo.rs  lib.rs
(+3753 files in other folders)
