[workspace]
members = [
    "src/console",
    "src/mission_control",
    "src/satellite",
    "src/observatory",
    "src/orbiter",
    "src/libs/shared",
    "src/libs/satellite",
    "src/libs/macros",
    "src/libs/utils",
    "src/libs/collections",
    "src/libs/storage"]
resolver = "2"

[workspace.package]
authors = ["David Dal Busco <https://daviddalbusco.com>"]
edition = "2021"
repository = "https://github.com/junobuild/juno"
homepage = "https://juno.build"

[workspace.dependencies]
candid = "0.10.2"
ic-cdk = "0.17.0"
ic-cdk-macros = "0.17.0"
ic-ledger-types = "0.14.0"
icrc-ledger-types = "0.1.6"
ic-cdk-timers = "0.11.0"
ic-stable-structures = "0.6.7"
serde = "1.0.190"
serde_cbor = "0.11.2"
serde_json = "1.0.111"
ciborium = "0.2.1"
sha2 = "0.10.7"
hex = "0.4.3"
url = "2.4.0"
regex = "1.9.3"
getrandom = { version = "0.2", features = ["custom"] }
rand = { version = "0.8.5", features = ["getrandom"]}

[patch.crates-io]
junobuild-shared = { path = "./src/libs/shared" }
junobuild-collections = { path = "./src/libs/collections" }
junobuild-storage = { path = "./src/libs/storage" }
