[workspace]
members = [
	"src/console",
	"src/mission_control",
	"src/satellite",
	"src/observatory",
	"src/orbiter",
	"src/sputnik",
	"src/libs/shared",
	"src/libs/satellite",
	"src/libs/macros",
	"src/libs/utils",
	"src/libs/collections",
	"src/libs/storage",
	"src/tests/fixtures/test_satellite"
]
resolver = "2"

[workspace.package]
authors = ["David Dal Busco <https://daviddalbusco.com>"]
edition = "2021"
repository = "https://github.com/junobuild/juno"
homepage = "https://juno.build"

[workspace.dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-ledger-types = "0.14.0"
icrc-ledger-types = "0.1.8"
ic-cdk-timers = "0.11.0"
ic-stable-structures = "0.6.8"
serde = "1.0.217"
serde_cbor = "0.11.2"
serde_json = "1.0.138"
ciborium = "0.2.2"
sha2 = "0.10.8"
hex = "0.4.3"
url = "2.5.4"
regex = "1.11.1"
getrandom = "0.3.2"
rand = { version = "0.9.1", features = ["os_rng"] }

[patch.crates-io]
junobuild-shared = { path = "./src/libs/shared" }
junobuild-collections = { path = "./src/libs/collections" }
junobuild-storage = { path = "./src/libs/storage" }
