[package]
name = "console"
version = "0.0.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-ledger-types.workspace = true
serde.workspace = true
serde_cbor.workspace = true
shared = { path = "../libs/shared" }
