[package]
name = "console"
version = "0.0.8-patch.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-ledger-types.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_cbor.workspace = true
ciborium.workspace = true
junobuild-shared = { path = "../libs/shared" }
junobuild-storage = { path = "../libs/storage" }
