[package]
name = "console"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-ledger-types.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
ciborium.workspace = true
regex.workspace = true
semver = "1.0.25"
junobuild-shared = { path = "../libs/shared" }
junobuild-storage = { path = "../libs/storage" }
junobuild-collections = { path = "../libs/collections" }
junobuild-cdn = { path = "../libs/cdn" }
