[package]
name = "mission_control"
version = "0.0.13"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-ledger-types.workspace = true
icrc-ledger-types.workspace = true
canfund = { git = "https://github.com/dfinity/canfund.git", rev = "8c10b7901a91a22dd7d478de83d1d106f7944de4" }
serde.workspace = true
futures = "0.3.28"
junobuild-shared = { path = "../libs/shared" }
