[package]
name = "mission_control"
version = "0.0.13"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-ledger-types.workspace = true
icrc-ledger-types.workspace = true
serde.workspace = true
canfund = "0.6.0"
futures = "0.3.28"
junobuild-shared = { path = "../libs/shared" }
