[package]
name = "mission_control"
version = "0.0.14"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-ledger-types.workspace = true
icrc-ledger-types.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
ciborium.workspace = true
getrandom.workspace = true
rand.workspace = true
canfund = "0.8.3"
junobuild-shared = { path = "../libs/shared" }
junobuild-storage = { path = "../libs/storage" }
junobuild-collections = { path = "../libs/collections" }
junobuild-cdn = { path = "../libs/cdn" }
