[package]
name = "observatory"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.3"
serde = "1.0.190"
lazy_static = "1.4.0"
ic-cdk-timers = "0.6.0"
shared = { path = "../shared" }
