[package]
name = "observatory"
version = "0.0.7"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
serde.workspace = true
lazy_static = "1.4.0"
junobuild-shared = { path = "../libs/shared" }
