[package]
name = "orbiter"
version = "0.0.8"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
ciborium.workspace = true
isbot = "0.1.3"
url.workspace = true
regex.workspace = true
junobuild-shared = { path = "../libs/shared" }
