[package]
name = "satellite"
version = "0.0.16"
edition = "2021"
publish = false
build = "../build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
serde.workspace = true
junobuild-satellite = { path = "../libs/satellite", default-features = false }

