[package]
name = "satellite"
version = "0.0.22"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
junobuild-satellite = { path = "../libs/satellite", default-features = false, features = ["on_init"] }
junobuild-storage = { path = "../libs/storage" }
junobuild-macros = { path = "../libs/macros" }
