[package]
name = "shared"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.3"
ic-cdk = "0.8.0"
ic-cdk-macros = "0.6.10"
ic-ledger-types = "0.5.0"
ic-stable-structures = "0.5.3"
serde = "1.0.162"
futures = "0.3.25"
