[package]
name = "shared"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.9.3"
ic-cdk = "0.11.0"
ic-cdk-macros = "0.8.0"
ic-ledger-types = "0.8.0"
serde = "1.0.182"
futures = "0.3.28"
ciborium = "0.2.1"