[package]
name = "shared"
version = "0.0.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-ledger-types.workspace = true
serde.workspace = true
futures = "0.3.28"
ciborium = "0.2.1"
time = "0.3.31"