[package]
name = "sputnik"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
junobuild-satellite = { path = "../libs/satellite", default-features = false, features = [
	"on_init_sync",
	"on_post_upgrade_sync",
	"on_init_random_seed"
] }
junobuild-collections = { path = "../libs/collections" }
junobuild-macros = { path = "../libs/macros" }
ic-wasi-polyfill = "0.7.0"
rquickjs = { version = "0.9.0", features = ["macro", "futures"] }
