[package]
name = "junobuild-auth"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Authentication toolkit for Juno."
homepage.workspace = true
documentation = "https://docs.rs/junobuild-auth"
readme = "README.md"
license-file = "LICENSE.md"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
rustc-args = ['--cfg', "getrandom_backend=\"custom\""]
rustdoc-args = ['--cfg', "getrandom_backend=\"custom\""]

[dependencies]
ic-cdk.workspace = true
candid.workspace = true
serde.workspace = true
serde_bytes.workspace = true
ic-certification.workspace = true
ic-canister-sig-creation = "1.3.0"
identity_jose = { git = "https://github.com/dfinity/identity.rs.git", rev = "aa510ef7f441848d6c78058fe51ad4ad1d9bd5d8", default-features = false }
sha2.workspace = true
junobuild-shared = "0.2.2"
