[package]
name = "junobuild-auth"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Authentication toolkit for Juno."
homepage.workspace = true
documentation = "https://docs.rs/junobuild-auth"
readme = "README.md"
license-file = "LICENSE.md"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
rustc-args = ['--cfg', "getrandom_backend=\"custom\""]
rustdoc-args = ['--cfg', "getrandom_backend=\"custom\""]

[dependencies]
ic-cdk.workspace = true
candid.workspace = true
serde.workspace = true
ic-certification.workspace = true
ic-canister-sig-creation = "1.3.0"
url.workspace = true
getrandom02 = { package = "getrandom", version = "0.2.16", features = ["custom"] }
junobuild-shared = "0.3.0"
