[package]
name = "junobuild-collections"
version = "0.2.4"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "The types and rules to define collections."
homepage.workspace = true
documentation = "https://docs.rs/junobuild-collections"
readme = "README.md"
license-file = "LICENSE.md"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
rustc-args = ['--cfg', "getrandom_backend=\"custom\""]
rustdoc-args = ['--cfg', "getrandom_backend=\"custom\""]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
serde.workspace = true
junobuild-shared = "0.3.0"
