[package]
name = "junobuild-macros"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full"] }
proc-macro2 = "1.0.76"
serde.workspace = true
serde_tokenstream = "0.2.0"

[dev-dependencies]
candid.workspace = true
ic-cdk.workspace = true
trybuild = "1.0.89"