[package]
name = "junobuild-macros"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Procedural macros for hooking into various events in Juno."
homepage.workspace = true
documentation = "https://docs.rs/junobuild-macros"
readme = "README.md"
license-file = "LICENSE.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full"] }
proc-macro2 = "1.0.93"
serde.workspace = true
serde_tokenstream = "0.2.2"
