[package]
name = "junobuild-satellite"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Core implementation of a Juno Satellite."
homepage.workspace = true
documentation = "https://docs.rs/junobuild-satellite"
readme = "README.md"
license-file = "LICENSE.md"

[package.metadata.juno.satellite]
version = "0.0.22"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
rustc-args = ['--cfg', "getrandom_backend=\"custom\""]
rustdoc-args = ['--cfg', "getrandom_backend=\"custom\""]

[features]
default = [
	"on_set_doc",
	"on_set_many_docs",
	"on_delete_doc",
	"on_delete_many_docs",
	"on_delete_filtered_docs",
	"on_upload_asset",
	"on_delete_asset",
	"on_delete_many_assets",
	"assert_set_doc",
	"assert_delete_doc",
	"assert_upload_asset",
	"assert_delete_asset"
]
on_set_doc = []
on_set_many_docs = []
on_delete_doc = []
on_delete_many_docs = []
on_delete_filtered_docs = []
on_upload_asset = []
on_delete_asset = []
on_delete_many_assets = []
on_delete_filtered_assets = []
on_init = []
on_post_upgrade = []
on_init_sync = []
on_post_upgrade_sync = []
on_init_random_seed = []
assert_set_doc = []
assert_delete_doc = []
assert_upload_asset = []
assert_delete_asset = []

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
regex.workspace = true
getrandom.workspace = true
rand.workspace = true
url.workspace = true
junobuild-shared = "0.1.0"
junobuild-utils = "0.1.0"
junobuild-collections = "0.1.0"
junobuild-storage = "0.1.0"
junobuild-cdn = { path = "../cdn" }
