[package]
name = "junobuild-shared"
version = "0.0.22"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Shared utilities for Juno."
homepage.workspace = true
documentation = "https://docs.rs/junobuild-shared"
readme = "README.md"
license-file = "LICENSE.md"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-ledger-types.workspace = true
icrc-ledger-types.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
futures = "0.3.28"
ciborium.workspace = true
time = "0.3.31"
regex.workspace = true
getrandom = { version = "0.2", features = ["custom"] }
rand = { version = "0.8.5", features = ["getrandom"]}