[package]
name = "junobuild-shared"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Shared utilities for Juno."
homepage.workspace = true
documentation = "https://docs.rs/junobuild-shared"
readme = "README.md"
license-file = "LICENSE.md"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
rustc-args = ['--cfg', "getrandom_backend=\"custom\""]
rustdoc-args = ['--cfg', "getrandom_backend=\"custom\""]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-ledger-types.workspace = true
icrc-ledger-types.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
getrandom.workspace = true
rand.workspace = true
futures = "0.3.31"
ciborium.workspace = true
time = "0.3.31"
regex.workspace = true
