[package]
name = "junobuild-storage"
version = "0.0.15"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Web and storage features of Juno."
homepage.workspace = true
documentation = "https://docs.rs/junobuild-collections"
readme = "README.md"
license-file = "LICENSE.md"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
rustdoc-args = ['--cfg', "getrandom_backend=\"custom\""]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
serde.workspace = true
serde_cbor.workspace = true
ic-stable-structures.workspace = true
sha2.workspace = true
hex.workspace = true
serde_bytes = "0.11.12"
ic-certification = "3.0.3"
ic-representation-independent-hash = "3.0.3"
regex.workspace = true
base64 = "0.22.1"
url.workspace = true
urlencoding = "2.1.3"
globset = "0.4.13"
junobuild-shared = "0.0.24"
junobuild-collections = "0.0.11"
