[package]
name = "junobuild-utils"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "A collection of utilities for developers on Juno."
homepage.workspace = true
documentation = "https://docs.rs/junobuild-utils"
readme = "README.md"
license = "MIT"

[dependencies]
candid.workspace = true
serde.workspace = true
serde_json.workspace = true
